Click word to speak

--- a/www/style/writing.css
+++ b/www/style/writing.css
@@ -50,6 +50,10 @@
         text-wrap-mode: nowrap;
         text-overflow: ellipsis;
       }
+
+      & > .clickable {
+        cursor: pointer;
+      }
     }
   }
 }
